--- a/daily-task/devfolio/devfolio.css
+++ b/daily-task/devfolio/devfolio.css
@@ -5,7 +5,48 @@
 body{
 	font-family:sans-serif;
 }
-.nav-img{
+@media (min-width:320px){
+	/* nav start */
+	.nav-img{
+	background-image:url("img/saran1.jpg"); 
+	background-size:cover;
+	background-attachment:fixed;
+	height:80vh;
+}
+.nav-lists{
+	display:none;
+}
+.nav{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	padding-top:1rem;
+	color:white;
+}
+.nav h1{
+	font-size:1.5rem;
+}
+.nav iconify-icon{
+	font-size:1.5rem;
+}
+.img-content h1{
+	color:white;
+	font-size:2.5rem;
+	text-align:center;
+	margin-top:1rem;
+}
+.img-content h3{
+	color:white;
+	font-size:1.5rem;
+	text-align:center;
+	margin-top:1.5rem;
+}
+
+
+
+
+}
+/* .nav-img{
 	background-image:url("img/man1.jpg"); 
 	background-repeat:no-repeat;
 	background-size:cover;
@@ -19,6 +60,7 @@ body{
 	justify-content:center;
 	align-items:center;
 	margin-left:1.5rem;
+	padding-top:2rem;
 }
 .nav-head{
 	width:30%;
@@ -49,4 +91,4 @@ body{
 }
 .img-content h3{
 	font-size:2rem;
-}
+} */
