--- a/daily-task/devfolio/devfolio.css
+++ b/daily-task/devfolio/devfolio.css
@@ -4,10 +4,11 @@
 }
 body{
 	font-family:sans-serif;
+	background-color:#f5f5f5;
 }
 @media (min-width:320px){
 	/* nav start */
-	.nav-img{
+.nav-img{
 	background-image:url("img/saran1.jpg"); 
 	background-size:cover;
 	background-attachment:fixed;
@@ -23,17 +24,17 @@ body{
 	padding-top:1rem;
 	color:white;
 }
-.nav h1{
-	font-size:1.5rem;
+.nav-head h1{
+	font-size:1.8rem;
 }
-.nav iconify-icon{
+.burger{
 	font-size:1.5rem;
 }
 .img-content h1{
 	color:white;
 	font-size:2.5rem;
 	text-align:center;
-	margin-top:1rem;
+	margin-top:2rem;
 }
 .img-content h3{
 	color:white;
@@ -41,54 +42,123 @@ body{
 	text-align:center;
 	margin-top:1.5rem;
 }
-
-
+   /* nav end */
+   /* about start */
+.abt{
+	margin-top:4rem;
+	margin-bottom:4rem;
+}
+.about{
+   background-color:#fff;
+   padding:1rem;
+}
+.abtImg{
+	line-height:3rem;
+}
+.abtImg span{
+	font-weight:700;
+}
+.abtImg img{
+   border-radius:10px;
+}
+.abtSkill{
+	line-height:2rem;
+}
+.abtSkill p{
+	font-size:1.2rem;
+}
+.abtCont h1{
+	margin-top:2rem;
+	font-size:1.8rem;
+}
+.abtCont h1::after{
+	content:"";
+	height:3px;
+	width:40%;
+	margin-top:.7rem;
+	line-height:1;
+	background-color:blue;
+	display:block;
+}
+.abtCont p{
+	font-size:1.3rem;
+	margin-top:2rem;
+	line-height:2rem;
+	color:#AF6F8C;
+}
+.abtImg img{
+	width:50%;
+}
+   /* about end */
 
 
 }
-/* .nav-img{
-	background-image:url("img/man1.jpg"); 
-	background-repeat:no-repeat;
+@media (min-width:768px){
+	/* nav start */
+.img-content h1{
+	font-size:4.5rem;
+}
+.img-content h3{
+	font-size:3rem;
+}
+	/* nav end */
+	/* about start */
+.abtImgcont{
+	width:50%;
+} 
+.abtCont{
+	width:50%;
+}
+.about{
+	display:flex;
+}
+.abtImg{
+	display:flex;
+}
+	
+
+	
+	
+}
+@media (min-width:1024px){
+   /* nav start */
+.nav-img{
+	background-image:url("img/saran1.jpg"); 
 	background-size:cover;
 	background-attachment:fixed;
-	height:50rem;
-}
-.nav{
-	
-	display:flex;
-	flex-direction:row;
-	justify-content:center;
-	align-items:center;
-	margin-left:1.5rem;
-	padding-top:2rem;
-}
-.nav-head{
-	width:30%;
-	color:white;
-	font-size:1.5rem;
-	margin-right:2rem;
+	height:100vh;
 }
 .nav-lists{
-	width:50%;
+	display:flex;
 	font-size:.8rem;
 }
 .nav-list{
 	color:white;
 	text-decoration:none;
 	padding:.9rem;
+	font-weight:600;
 }
 .nav-list:hover{
 	text-decoration:underline;
 	color:white;
-}
-.img-content{
-	color:white;
-	text-align:center;
+}   
+.exLink{
+	display:none;
 }
 .img-content h1{
-	font-size:3rem;
-	margin-top:13rem;
+	margin-top:10rem;
 }
-.img-content h3{
+.nav-lists{
+	font-size:1rem;
+}
+.nav-head h1{
 	font-size:2rem;
-} */
+}
+   /* nav end */
+   /* about start */
+.about{
+	display:flex;
+}
+
+}
+
