--- a/daily-task/saranya/saranya.css
+++ b/daily-task/saranya/saranya.css
@@ -4,7 +4,7 @@
 }
 body{
 	font-family:sans-serif;
-	background-color:#f5f5f5;
+	background-color:#cee86b;
 }
 @media (min-width:320px){
 	/* nav start */
@@ -60,11 +60,11 @@ body{
    /* nav end */
    /* about start */
 .about{
-	margin-top:3rem;
+	margin-top:2rem;
+	margin-bottom:2rem;
 }
 .abtCont h1{
 	font-size:2rem;
-	text-align:center;
 	margin-bottom:2rem;
 	color:#444444;
 	margin-top:5rem;
@@ -73,14 +73,12 @@ body{
 	content:"";
 	height:2px;
 	width:18%;
-	margin:auto;
 	margin-top:.7rem;
 	line-height:1;
 	background-color:#EF7F4D;
 	display:block;
 }
 .abtCont p{
-	text-align:center;
 	font-size:1.2rem;
 	line-height:1.5rem;
 	margin-bottom:2rem;
@@ -110,35 +108,64 @@ span{
 .progress{
 	text-align:center;
 	margin-bottom:5rem;
+	
 }
    /* skill end */
    /* facts start */
-.boxs{
-	background-color:#E9E8E6;
-	padding:2rem;
-	margin:2rem;
-	text-align:center;
-	border-radius:10%;
+.fact{
+	background-color:#fff;
+	padding:1rem;
 }
-.boxs:hover{
+.count-row{
+    gap: 2rem;
+}
+.count-content{
+   width: 100%;
+   background-color: #fff;
+   box-shadow: 0px 0 16px rgb(0 0 0 / 10%);
+   padding:2.7rem 0;
+   margin-bottom: 30px;
+   text-align: center;
+   border-radius:10%;
+}
+.count-content span{
+   font-size: 2.5rem;
+   display: block;
+   font-weight: 700;
+   color:orange;
+   margin-bottom: 1rem;
+}
+.count-content p{
+   font-size: 1rem;
+   color:black;
+}
+.count-content:hover{
 	background-color:orange;
-	color:white;
 }
-.boxs:hover h2{
+.count-content:hover span{
 	color:white;
-}
-.box h2{
-	font-size:3rem;
-	color:orange;
 }   
    /* fact end */
    /* testimonnials start */
+.testi{
+	background-image:url("img/back.jpg");
+	background-repeat:no-repeat;
+	background-size:cover;
+	padding:1rem;
+}
+.testi h6{
+	text-align:center;
+}
+.testi h3{
+	text-align:center;
+	margin-top:2rem;
+}
+.testi p{
+	text-align:center;
+}
 .terImg{
 	border-radius:50%;
 	margin-left:6rem;
-}
-.terCont h3, p{
-	text-align:center;
 }
 .terCont p{
 	margin-bottom:2rem;
@@ -181,6 +208,87 @@ span{
 	padding:.5rem;
 	line-height:1.5rem;
 }
+.resBor{
+	border-left:3px solid orange;
+}
+   /* resume end */
+   /* service start */
+.ser{
+	background-color:#fff;
+	padding:2rem;
+}
+.service{
+    padding: 5rem 0;
+}
+.service-title{
+    margin-bottom: 3rem;
+}
+.service-title h1{
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #444444;
+}
+.service-row{
+    justify-content: space-between;
+}
+.service-content{
+    text-align: center;
+    margin:1rem;
+	box-shadow:3px 3px 4px 2px #444444;
+}
+.ser-icon{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    background: #fff;
+    border-radius: 50%;
+    color: #428bca;
+    box-shadow: 0px 0 25px rgb(0 0 0 / 15%);
+}
+.ser-icon iconify-icon{
+    font-size: 2rem;
+}
+.service-content:hover .ser-icon{
+    box-shadow:0px 0 25px #cee86b;
+	color:orange;
+	background-color:#cee86b;
+	transition:.5s;
+}
+.service-content h3{
+    color: #444;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+.service-content h3::after{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    background: #428bca;
+    margin: 0.7rem 0;
+    left: calc(50% - 25px);
+}
+.service-content p{
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    color: #aaaaaa;
+}
+.service-title h1::after{
+	content:"";
+	height:2px;
+	width:18%;
+	margin-top:.7rem;
+	line-height:1;
+	background-color:#EF7F4D;
+	display:block;
+}
+   /* service end */
 
 
 
@@ -199,6 +307,27 @@ span{
 	/* skill start */
 	/* skill end */
 	/* fact start */
+.count-row{
+   display: flex;
+   flex-wrap: wrap;
+   gap: inherit;
+}
+.count-content{
+   width: 46%;
+   box-shadow: 0px 0 16px rgb(0 0 0 / 10%);
+   padding:2.7rem 0;
+   margin:0 0 30px 20px;
+   text-align: center;
+}
+.count-content span{
+   font-size: 2.5rem;
+   display: block;
+   font-weight: 700;
+    margin-bottom: 1rem;
+}
+.count-content p{
+    font-size: 1rem;
+}
 	/* fact end */
 	/* testimonnials start */
 .terImg{
@@ -206,6 +335,76 @@ span{
 	margin-left:18rem;
 }
 	/* testimonnials end */
+	/* resume start */
+	/* resume end */
+	/* service start */
+.service{
+    padding: 5rem 0;
+}
+.service-title{
+    margin-bottom: 3rem;
+}
+.service-title h1{
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #5c768d;
+}
+.service-row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.service-content{
+    width: 30%;
+    text-align: center;
+    margin:1rem;
+	box-shadow:3px 3px 4px 2px #444444;
+}
+.ser-icon{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    background: #fff;
+    border-radius: 50%;
+    color: #428bca;
+    box-shadow: 0px 0 25px rgb(0 0 0 / 15%);
+}
+.ser-icon iconify-icon{
+    font-size: 2rem;
+}
+.service-content:hover .ser-icon{
+    box-shadow:0px 0 25px #cee86b;
+	color:orange;
+	background-color:#cee86b;
+}
+.service-content h3{
+    color: #444;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+.service-content h3::after{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    background: #428bca;
+    margin: 0.7rem 0;
+    left: calc(50% - 25px);
+}
+.service-content p{
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    color: #aaaaaa;
+}
+	/* service end */
+	
+	
 
 	
 }
@@ -261,22 +460,38 @@ span{
 }
 .abtBio{
 	display:flex;
-	gap:4rem;
+	gap:10rem;
 }
    /* skill start */
    /* skill end */
    /* fact start */
- .box{
-	 display:flex;
- }
- .boxs{
-	 width:50%;
- }
+.count-row{
+    display: flex;
+    gap: 2rem;
+    flex-wrap: nowrap;
+}
+.count-content{
+    width: 25%;
+    box-shadow: 0px 0 16px rgb(0 0 0 / 10%);
+    padding:2.7rem 0;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.count-content span{
+    font-size: 2.5rem;
+    display: block;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.count-content p{
+    font-size: 1rem;
+}
     /* fact end */
 	/* testimonnials start */
 .terImg{
 	width:10%;
-	margin-left:26rem;
+	margin:auto;
+	display:flex;
 }
 
 	/* testimonnials end */
@@ -286,9 +501,78 @@ span{
 	gap:3rem;
 }
 .res{
-	width:45%;
-	
+	width:45%;	
 }
+   /* resume end */
+   /* service start */
+.service{
+    padding: 5rem 0;
+}
+.service-title{
+    margin-bottom: 3rem;
+}
+.service-title h1{
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #5c768d;
+}
+.service-row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.service-content{
+    width: 22.5%;
+    text-align: center;
+    margin:1rem;
+	box-shadow:3px 3px 4px 2px #444444;
+}
+.ser-icon{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    background: #fff;
+    border-radius: 50%;
+    color: #428bca;
+    box-shadow: 0px 0 25px rgb(0 0 0 / 15%);
+}
+.ser-icon iconify-icon{
+    font-size: 2rem;
+}
+.service-content:hover .ser-icon{
+    box-shadow:0px 0 25px #cee86b;
+	color:orange;
+	background-color:#cee86b;
+}
+.service-content h3{
+    color: #444;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+.service-content h3::after{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    background: #428bca;
+    margin: 0.7rem 0;
+    left: calc(50% - 25px);
+}
+.service-content p{
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    color: #aaaaaa;
+}
+.service-title h1::after{
+	width:6%;	
+}
+   /* service end */
 
 
 
