--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -83,7 +83,34 @@ body{
 	font-size:1rem;
 }
    /* skill end */
-
+   /* resume start */
+.resume h3{
+	font-size:1.9rem;
+	margin-bottom:.8rem;
+	margin-top:2rem;
+}
+.resume h4{
+	font-size:1.5rem;
+}
+.traini{
+	margin-top:2rem;
+}
+.resume h5{
+	width:37%;
+	background-color:#34B7A7;
+	color:white;
+}
+.res{
+	border-left:2px solid #34B7A7;
+	gap:.5rem;
+}
+.res .list{
+	margin-bottom:1rem;
+}
+.resume h5{
+	margin-bottom:1rem;
+	margin-top:1rem;
+}
 
 
 
@@ -141,7 +168,13 @@ body{
 	font-size:1.1rem;
 }
    /* skill end */
-
+   /* resume start */
+.resume h5{
+	width:30%;
+}
+.res{
+	margin-left:3rem;
+}
 
 
 
@@ -200,6 +233,9 @@ body{
 	font-size:1.2rem;
 }
    /* skill end */
-
+   /* resume start */
+.res{
+	margin-left:5rem;
+}
 	
 }
