--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -52,7 +52,7 @@ body{
 	display:block;
 }
 .abtBorder{
-	border:1.3rem solid #BDA787; 
+	border:1.3rem solid #34B7A7; 
 	width:60%;
 	height:12rem;
 	margin-top:3rem;
@@ -125,7 +125,6 @@ body{
 	margin-top:1rem;
 }
 .resume{
-	margin-bottom:2rem;
 	margin-top:2rem;
 	padding-top:2rem;
 	padding-bottom:2rem;
@@ -149,11 +148,8 @@ body{
 	display:block;
 }
 .project{
-	margin-bottom:2rem;
-	margin-top:2rem;
 	padding-top:2rem;
-	padding-bottom:2rem;
-	background-color:#eeeeee;
+	padding-bottom:3rem;
 }
 .projectIn h2{
 	font-size:2rem;
@@ -222,7 +218,7 @@ body{
 	padding:1rem;
 }
 .abtBorder{
-	border:1.3rem solid #BDA787; 
+	border:1.3rem solid #34B7A7; 
 	width:55%;
 	height:30rem;
 	margin-top:6rem;
@@ -281,7 +277,7 @@ body{
 	/* banner end */
 	/* about start */
 .abtBorder{
-	border:1.3rem solid #BDA787; 
+	border:1.3rem solid #34B7A7; 
 	width:60%;
 	height:25rem;
 	margin-top:6rem;
