--- a/js/task/calculator/calculator.css
+++ b/js/task/calculator/calculator.css
@@ -13,7 +13,7 @@
 	align-items:center;
 }
 .calculator{
-	background-color:#ecf0f3;
+	background-color:#59646c;
 	padding:15px;
 	border-radius:30px;
 	box-shadow:inset 5px 5px 12px #ffffff,
@@ -21,7 +21,7 @@
     display:grid;
     grid-template-columns: repeat(4,68px);   	
 }
-.input{
+input{
 	grid-column:span 4;
 	height:70px;
 	width:260px;
@@ -42,8 +42,6 @@ button{
 	height:48px;
 	width:48px;
 	background-color:#ecf0f3;
-	box-shadow:-5px -5px 12px #ffffff,
-	            5px 5px 12px rgba(0,0,0,0.6);
 	border:none;
 	border-radius:50px;
 	margin:8px;
@@ -53,6 +51,4 @@ button{
 	width:115px;
 	border-radius:40px;
 	background-color:#ecf0f3;
-	box-shadow:-5px -5px 12px #ffffff,
-	            5px 5px 12px rgba(0,0,0,0.6);
 }
