--- a/daily task/day/day.css
+++ b/daily task/day/day.css
@@ -105,7 +105,48 @@ body{
 	color:#CC1616;
 	font-size:1.5rem;
 }
+.abtImg{
+	margin-top:2rem;
+	margin-bottom:2rem;
+}
    /* about end */
+   /* lorem start */
+.loremIn{
+	margin-top:5rem;
+	margin-bottom:2rem;
+}
+.loremIn h2{
+	font-size:1.5rem;
+	color:#CC1616!important;
+	padding-bottom:1.5rem;
+	padding-top:2rem;
+	
+}
+.loremIn h3{
+	font-size:1.5rem;
+	color:#7f7878;
+	padding-bottom:1rem;
+}
+.loremIn p{
+	font-size:1rem;
+	color:#A3A3A3;
+	padding-bottom:2rem;
+	padding-top:1rem;
+	line-height:1.5rem;
+}
+.lorem{
+	box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
+	padding:1rem;
+	margin-bottom:1.5rem;
+}
+/* .lorem:hover{ */
+	/* background-color:#CC1616; */
+/* } */
+/* .lorem:hover.lorem h2,h3,p{ */
+	/* color:white!important; */
+/* } */
+   
+   /* lorem end */
    
    
    
@@ -142,8 +183,9 @@ body{
 }
    /* header name end */
    /* about start */
-   
    /* about end */
+   /* lorem start */
+   /* lorem end */
 	
 	
 }
@@ -185,8 +227,17 @@ body{
 }
    /* header end */
    /* about start */
-   
+.abtIn{
+	display:flex;
+	gap:3rem;
+}
    /* about end */
+   /* lorem start */
+.loremIn{
+	display:flex;
+	gap:1rem;
+}
+   /* lorem end */
 	
 	
 	
