--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -179,6 +179,10 @@ body{
 	text-decoration:none;
 	font-size:2rem;
 }
+.projectIn p{
+	color:white;
+	margin-top:2rem;
+}
    
 
 
@@ -318,5 +322,8 @@ body{
 	/* project start */
 .projectIn h2::after{
 	width:6%;
+}
+.projectIn p{
+	margin-top:5rem;
 }
 }
