--- a/daily task/day/day.css
+++ b/daily task/day/day.css
@@ -147,6 +147,23 @@ body{
 /* } */
    
    /* lorem end */
+   /* service start */
+.serOut{
+	margin-bottom:2rem;
+	margin-top:2rem;
+	text-align:center;
+	background-color:white;
+}
+.serCont{
+	box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
+	margin-bottom:1rem;
+}
+.serIn h2{
+	font-size:1.5rem;
+	margin-top:2rem;
+}
+
+   /* service end */
    
    
    
@@ -186,6 +203,10 @@ body{
    /* about end */
    /* lorem start */
    /* lorem end */
+   /* service start */
+   /* service end */
+   
+   
 	
 	
 }
@@ -212,6 +233,7 @@ body{
 }
 .headLink a:hover{
 	background-color:#CC1616;
+	color:#A3A3A3;
 }
    /* header name end */
    /* header start */
@@ -238,6 +260,8 @@ body{
 	gap:1rem;
 }
    /* lorem end */
+   /* service start */
+   /* service end */
 	
 	
 	
