--- a/js/task/snake_and_ladder/snake_and_ladder.css
+++ b/js/task/snake_and_ladder/snake_and_ladder.css
@@ -1,20 +1,11 @@
 body{
 	background-color:lightgrey;
-	font-family:sans-serif;
 }
 .playBox{
-	position:absolite;
-	margin:auto;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	border:.1vmin solid black;
-	height:156vh;
-	width:100%;
+	border:.1px solid black; 
 }
 .red{
-	float:right;
+	float:left;
 	height:6rem;
 	width:6rem;
 	border:.1px solid black;
@@ -25,7 +16,7 @@ body{
 	align-items:center;
 }
 .blue{
-	float:right;
+	float:left;
 	height:6rem;
 	width:6rem;
 	border:.1px solid black;
@@ -36,7 +27,7 @@ body{
 	align-items:center;
 }
 .green{
-	float:right;
+	float:left;
 	height:6rem;
 	width:6rem;
 	border:.1px solid black;
@@ -47,7 +38,7 @@ body{
 	align-items:center;
 }
 .yellow{
-	float:right;
+	float:left;
 	height:6rem;
 	width:6rem;
 	border:.1px solid black;
@@ -58,7 +49,7 @@ body{
 	align-items:center;
 }
 .white{
-	float:right;
+	float:left;
 	border:.1px solid black;
 	height:6rem;
 	width:6rem;
@@ -67,4 +58,39 @@ body{
 	display:flex;
 	justify-content:center;
 	align-items:center;
+}
+.snack1{
+	position:absolute;
+	top:10rem;
+	bottom:0;
+	left:2rem;
+	right:0;
+}
+.snack2{
+	position:absolute;
+	top:15rem;
+	bottom:0;
+	left:41rem;
+	right:0;
+}
+.snack5{
+	position:absolute;
+	top:33rem;
+	bottom:0;
+	left:5rem;
+	right:0;
+}
+.ladder1{
+	position:absolute;
+	top:43rem;
+	bottom:0;
+	left:38rem;
+	right:0;
+}
+.ladder2{
+	position:absolute;
+	top:11rem;
+	bottom:0;
+	left:19rem;
+	right:0;
 }
