--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -167,8 +167,9 @@ body{
 	bottom:0;
 	left:0;
 	right:0;
-	background-color:rgba(31,53,72,.6);
+	background-color:#111112;
 	text-align:center;
+	padding-top:3rem;
 }
 .portImg:hover .portCont{
 	opacity:1;
@@ -183,7 +184,58 @@ body{
 	color:white;
 	margin-top:2rem;
 }
-   
+.portCont a{
+	font-size:1.5rem;
+}
+   /* project */
+   /* contact */
+.contactOut{
+	background-color:#eeeeee;
+	padding-bottom:2rem;
+	margin-top:2rem;
+	padding-top:2rem;
+}
+.cont{
+	box-shadow: 0px 2px 15px #34b79a47;
+	border-radius:5%;
+	text-align:center;
+	padding:2rem;
+	margin:1rem;
+	background-color:#34b79a47;
+}
+.contIcon{
+    color:#34B7A7;
+	font-size:2.5rem;
+	padding-bottom:1rem;
+}
+.contactIn h2::after{
+	content:"";
+	height:2px;
+	margin:auto;
+	width:18%;
+	margin-top:.7rem;
+	line-height:1;
+	background-color:#34B7A7;
+	display:block;
+}
+.contactIn h2{
+	text-align:center;
+	 font-size:2.5rem;
+}
+   /* contact end */
+   /* designed start */
+.designOut{
+   	background-color:#eeeeee;
+	margin-bottom:-1rem;
+}
+.designed{
+	text-align:center;
+	font-weight:600;
+}
+.span{
+	color:#34B7A7;
+	font-size:1.2rem;
+}
 
 
 
@@ -245,11 +297,21 @@ body{
    /* skill end */
    /* resume start */
 .resume h5{
-	width:30%;
+	width:40%;
 }
 .res{
 	margin-left:3rem;
 }
+   /* resume end */
+   /* project start */
+   /* project end */
+   /* contact start */
+.call{
+	margin:auto;
+}
+   /* contact end */
+   /* design start */
+   /* design end */
 
 
 
@@ -324,6 +386,31 @@ body{
 	width:6%;
 }
 .projectIn p{
-	margin-top:5rem;
+	margin-top:1.7rem;
 }
+.portImg p{
+	padding:2rem;
+	font-size:1.5rem;
+}
+.portCont a{
+	font-size:1.8rem;
+}
+   /* project end */
+   /* contact start */
+.contactIn h2::after{
+	content:"";
+	height:2px;
+	margin:auto;
+	width:6%;
+	margin-top:.7rem;
+	line-height:1;
+	background-color:#34B7A7;
+	display:block;
+}
+.contHead h2{
+    font-size:2.5rem;
+}
+   /* contact end */
+   /* design start */
+   /* design end */
 }
