--- a/own-practice/progress/progress.css
+++ b/own-practice/progress/progress.css
@@ -1,37 +1,79 @@
-.RadialProgress {
-  --hue: 220;
-  --holesize: 65%;
-  --track-bg: hsl(233 34% 92%);
+body {
+  font-family: 'Montserrat', sans-sherif;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  background-repeat: no-repeat;
+  height: 100vh;
+  color: #555555;
+  overflow: hidden;
   
-  block-size: 50vmin;
-  inline-size: 50vmin;
-  min-inline-size: 100px;
-  min-block-size: 100px;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #ffffff;
+  margin: 0 20px;
+  width: 280px;
+  height: 350px;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.2);
+}
+
+.card .percent {
   position: relative;
-  font-weight: 700;
-  font-size: max(10vmin, 1.4rem);
-  
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-radius: 50%;
-    z-index: -1;
-    background: conic-gradient(
-      hsl(var(--hue) 100% 70%),
-      hsl(var(--hue) 100% 40%),
-      hsl(var(--hue) 100% 70%) var(--progress, 0%),
-      var(--track-bg) var(--progress, 0%) 100%
-    );
-    
-    mask-image: radial-gradient(
-      transparent var(--holesize),
-      black calc(var(--holesize) + 0.5px)
-    );
-  }
+}
+
+.card svg {
+  position: relative;
+  width: 210px;
+  height: 210px;
+  transform: rotate(-90deg);
+}
+
+.card svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #f0f0f0;
+  stroke-width: 10;
+  stroke-linecap: round;
+}
+
+.card svg circle:last-of-type {
+  stroke-dasharray: 625px;
+  stroke-dashoffset: calc(625px - (625px * var(--percent)) / 100);
+  stroke: #3498db; 
+}
+
+.card .number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card .number h3 {
+  font-weight: 200;
+  font-size: 3.5rem;
+}
+
+.card .number h3 span {
+  font-size: 2rem;
+}
+
+.card .title h2 {
+  margin: 25px 0 0;
+}
+
+.card:nth-child(1) svg circle:last-of-type {
+  stroke: #f39c12;
+}
+
+.card:nth-child(2) svg circle:last-of-type {
+  stroke: #2ecc71;
 }
