--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -28,6 +28,17 @@ body{
 	font-size:1.5rem;
 	margin-bottom:2rem;
 }
+.git iconify-icon{
+	font-size:3rem;
+}
+.git{
+	font-size:1.5rem;
+	color:black;
+	text-decoration:none;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
 .navImg img{
 	border-radius:50%;
 	/* transform:skewY(20deg); */
@@ -82,6 +93,12 @@ body{
 }
 .progress label{
 	font-size:1rem;
+}
+.bar{
+	margin-top:3rem;
+}
+.bar h2{
+	margin-left:3rem;
 }
    /* skill end */
    /* resume start */
