--- a/boostrap/ninestar/ninestar.css
+++ b/boostrap/ninestar/ninestar.css
@@ -38,8 +38,9 @@
 	background-color:#FEF8F5;
 	padding:2rem;
 }
-.head h2{
-	font-size:2rem;
+.head h3{
+	margin-top:3rem;
+	font-size:2.5rem;
 	margin-bottom:1rem;
 }
 .head p{
@@ -449,6 +450,10 @@
 	font-size:1.5rem;
 	margin-left:-3rem;
 }
+.address iconify-icon:hover{
+	   background-color:#EB5D1E;
+	   color:white;
+}
    /* contact end */
    /* news letter start */
 .news h3{
@@ -516,7 +521,7 @@
 		margin-top:30px;
 	}
 }
-.section10{
+.adSolcial{
 	padding-bottom:3rem;
 }
 .nine h1{
@@ -535,6 +540,16 @@
 .nine-1 h1{
 	font-size:1.3rem;
 	font-weight:bold;
+}
+.text-center button{
+	background-color:#EB5D1E;
+	color:white;
+	padding:.5rem 1.5rem;
+	margin-top:1.5rem;
+	border-radius:.3rem;
+}
+.bottom a:hover{
+	color:#EB5D1E;
 }
 .bottom li{
 	margin-top:15px;
@@ -576,7 +591,7 @@
 	color:white;
 }
 /*footer*/
-.section12{
+.over{
 	background-color:#FEF8F5;
 	padding-bottom:3rem;
 }
@@ -709,9 +724,9 @@
 	border:1px solid #EB5D1E;
 	background-color:#EB5D1E;
 	color:white;
-	padding:.5rem;
+	padding:.5rem 2rem;
+	border-radius:.3rem;
 	margin-bottom:1rem;
-	width:40%;
 }
 .get:hover{
 	background-color:orange;
