--- a/daily task/mamba/mamba.css
+++ b/daily task/mamba/mamba.css
@@ -1,6 +1,23 @@
 body{
     font-family: "Open Sans", sans-serif;
 }
+/* @media (min-width:360px){ */
+	/* .head-nav{ */
+        /* overflow: hidden; */
+        /* background-color: #333; */
+    /* } */
+
+    /* .head-nav a{ */
+        /* float: left; */
+        /* display: block; */
+        /* color: #f2f2f2; */
+        /* text-align: center; */
+        /* padding: 14px 16px; */
+        /* text-decoration: none; */
+        /* font-size: 17px; */
+    /* } */
+	
+	/* } */
 *{
 	margin:0;
 	padding:0;
@@ -40,6 +57,13 @@ body{
     .top-icon2{
        display: none;
     }
+	.navLink:hover{
+		color:blue;
+	}
+	.solo{
+		color:blue!important;
+	}
+	
     }
 @media (min-width:560px){
 	.container{
