--- a/boostrap/itsMe/itsMe.css
+++ b/boostrap/itsMe/itsMe.css
@@ -13,6 +13,10 @@ body{
 }
    /* nav end */
 	/* banner start */
+.navLogo{
+	font-size:3rem;
+	
+}
 .banner{
 	margin-top:2rem;
 	margin-bottom:2rem;
@@ -30,6 +34,10 @@ body{
 }
 .git iconify-icon{
 	font-size:3rem;
+	display:inline-block;
+}
+.navCont a:hover{
+	color:#34B7A7!important;
 }
 .git{
 	font-size:1.5rem;
@@ -99,6 +107,9 @@ body{
 }
 .bar h2{
 	margin-left:3rem;
+}
+.progress-bar{
+	background-color:#34B7A7!important;
 }
    /* skill end */
    /* resume start */
